assignment1/initial/src/main/d96/parser/D96Parser.py
# Generated from main/d96/parser/D96.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class D96Parser ( Parser ):

    grammarFileName = "D96.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'Break'", "'Continue'", "'If'", "'Elseif'", 
                     "'Else'", "'Foreach'", "'True'", "'False'", "'Array'", 
                     "'In'", "'Int'", "'Float'", "'Boolean'", "'String'", 
                     "'Return'", "'Null'", "'Class'", "'Val'", "'Var'", 
                     "'Self'", "'Constructor'", "'Destructor'", "'New'", 
                     "'By'", "<INVALID>", "<INVALID>", "<INVALID>", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'='", "'!='", "'<'", "'<='", "'>'", "'>='", 
                     "'==.'", "'+.'", "'::'", "'('", "')'", "'['", "']'", 
                     "'.'", "'..'", "':'", "','", "';'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "BREAK", "CONTINUE", "IF", "ELSEIF", 
                      "ELSE", "FOREACH", "TRUE", "FALSE", "ARRAY", "IN", 
                      "INT", "FLOAT", "BOOLEAN", "STRING", "RETURN", "NULL", 
                      "CLASS", "VAL", "VAR", "SELF", "CONSTRUCTOR", "DESTRUCTOR", 
                      "NEW", "BY", "ID", "DOLLARID", "COMMENT", "ADDOP", 
                      "SUBOP", "MULOP", "DIVOP", "MODOP", "NOTOP", "ANDOP", 
                      "OROP", "EQUOP", "ASSIOP", "NEOP", "LTOP", "LTEOP", 
                      "GTOP", "GTEOP", "DOUEQUODOTOP", "ADDDOTOP", "DOUCOLON", 
                      "LB", "RB", "LSB", "RSB", "DOT", "DOUDOT", "COLON", 
                      "COMMA", "SEMI", "LP", "RP", "ARRAYSIZE", "INTLIT", 
                      "FLOATLIT", "BOOLLIT", "STRINGLIT", "WS", "ERROR_CHAR", 
                      "ILLEGAL_ESCAPE", "UNCLOSE_STRING" ]

    RULE_program = 0
    RULE_classdecl = 1
    RULE_classbody = 2
    RULE_attrdecl = 3
    RULE_mutable = 4
    RULE_immutable = 5
    RULE_nonvalue = 6
    RULE_nonvaluedollar = 7
    RULE_value = 8
    RULE_valuedollar = 9
    RULE_methdecl = 10
    RULE_basicmeth = 11
    RULE_constructor = 12
    RULE_destructor = 13
    RULE_paralist = 14
    RULE_methodattrdecl = 15
    RULE_indexedarray = 16
    RULE_arraylist = 17
    RULE_multiarray = 18
    RULE_multiarraylist = 19
    RULE_blockstmt = 20
    RULE_stmt = 21
    RULE_assignstmt = 22
    RULE_indexexp = 23
    RULE_ifstmt = 24
    RULE_forinstmt = 25
    RULE_breakstmt = 26
    RULE_continuestmt = 27
    RULE_returnstmt = 28
    RULE_methodinvostmt = 29
    RULE_explist = 30
    RULE_exp = 31
    RULE_exp0 = 32
    RULE_exp1 = 33
    RULE_exp2 = 34
    RULE_exp3 = 35
    RULE_exp4 = 36
    RULE_exp5 = 37
    RULE_exp6 = 38
    RULE_exp7 = 39
    RULE_exp8 = 40
    RULE_exp9 = 41
    RULE_operands = 42
    RULE_literals = 43
    RULE_typ = 44
    RULE_arraytyp = 45
    RULE_primitivetyp = 46

    ruleNames =  [ "program", "classdecl", "classbody", "attrdecl", "mutable", 
                   "immutable", "nonvalue", "nonvaluedollar", "value", "valuedollar", 
                   "methdecl", "basicmeth", "constructor", "destructor", 
                   "paralist", "methodattrdecl", "indexedarray", "arraylist", 
                   "multiarray", "multiarraylist", "blockstmt", "stmt", 
                   "assignstmt", "indexexp", "ifstmt", "forinstmt", "breakstmt", 
                   "continuestmt", "returnstmt", "methodinvostmt", "explist", 
                   "exp", "exp0", "exp1", "exp2", "exp3", "exp4", "exp5", 
                   "exp6", "exp7", "exp8", "exp9", "operands", "literals", 
                   "typ", "arraytyp", "primitivetyp" ]

    EOF = Token.EOF
    BREAK=1
    CONTINUE=2
    IF=3
    ELSEIF=4
    ELSE=5
    FOREACH=6
    TRUE=7
    FALSE=8
    ARRAY=9
    IN=10
    INT=11
    FLOAT=12
    BOOLEAN=13
    STRING=14
    RETURN=15
    NULL=16
    CLASS=17
    VAL=18
    VAR=19
    SELF=20
    CONSTRUCTOR=21
    DESTRUCTOR=22
    NEW=23
    BY=24
    ID=25
    DOLLARID=26
    COMMENT=27
    ADDOP=28
    SUBOP=29
    MULOP=30
    DIVOP=31
    MODOP=32
    NOTOP=33
    ANDOP=34
    OROP=35
    EQUOP=36
    ASSIOP=37
    NEOP=38
    LTOP=39
    LTEOP=40
    GTOP=41
    GTEOP=42
    DOUEQUODOTOP=43
    ADDDOTOP=44
    DOUCOLON=45
    LB=46
    RB=47
    LSB=48
    RSB=49
    DOT=50
    DOUDOT=51
    COLON=52
    COMMA=53
    SEMI=54
    LP=55
    RP=56
    ARRAYSIZE=57
    INTLIT=58
    FLOATLIT=59
    BOOLLIT=60
    STRINGLIT=61
    WS=62
    ERROR_CHAR=63
    ILLEGAL_ESCAPE=64
    UNCLOSE_STRING=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(D96Parser.EOF, 0)

        def classdecl(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassdeclContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassdeclContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = D96Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 94
                self.classdecl()
                self.state = 97 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==D96Parser.CLASS):
                    break

            self.state = 99
            self.match(D96Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(D96Parser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.ID)
            else:
                return self.getToken(D96Parser.ID, i)

        def LP(self):
            return self.getToken(D96Parser.LP, 0)

        def RP(self):
            return self.getToken(D96Parser.RP, 0)

        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def classbody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(D96Parser.ClassbodyContext)
            else:
                return self.getTypedRuleContext(D96Parser.ClassbodyContext,i)


        def getRuleIndex(self):
            return D96Parser.RULE_classdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassdecl" ):
                return visitor.visitClassdecl(self)
            else:
                return visitor.visitChildren(self)




    def classdecl(self):

        localctx = D96Parser.ClassdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classdecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(D96Parser.CLASS)
            self.state = 102
            self.match(D96Parser.ID)
            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==D96Parser.COLON:
                self.state = 103
                self.match(D96Parser.COLON)
                self.state = 104
                self.match(D96Parser.ID)


            self.state = 107
            self.match(D96Parser.LP)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << D96Parser.VAL) | (1 << D96Parser.VAR) | (1 << D96Parser.CONSTRUCTOR) | (1 << D96Parser.DESTRUCTOR) | (1 << D96Parser.ID) | (1 << D96Parser.DOLLARID))) != 0):
                self.state = 108
                self.classbody()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(D96Parser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassbodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrdecl(self):
            return self.getTypedRuleContext(D96Parser.AttrdeclContext,0)


        def methdecl(self):
            return self.getTypedRuleContext(D96Parser.MethdeclContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_classbody

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassbody" ):
                return visitor.visitClassbody(self)
            else:
                return visitor.visitChildren(self)




    def classbody(self):

        localctx = D96Parser.ClassbodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classbody)
        try:
            self.state = 118
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAL, D96Parser.VAR]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.attrdecl()
                pass
            elif token in [D96Parser.CONSTRUCTOR, D96Parser.DESTRUCTOR, D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.methdecl()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(D96Parser.SEMI, 0)

        def mutable(self):
            return self.getTypedRuleContext(D96Parser.MutableContext,0)


        def immutable(self):
            return self.getTypedRuleContext(D96Parser.ImmutableContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_attrdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrdecl" ):
                return visitor.visitAttrdecl(self)
            else:
                return visitor.visitChildren(self)




    def attrdecl(self):

        localctx = D96Parser.AttrdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_attrdecl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.VAR]:
                self.state = 120
                self.mutable()
                pass
            elif token in [D96Parser.VAL]:
                self.state = 121
                self.immutable()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 124
            self.match(D96Parser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(D96Parser.VAR, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def nonvaluedollar(self):
            return self.getTypedRuleContext(D96Parser.NonvaluedollarContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def valuedollar(self):
            return self.getTypedRuleContext(D96Parser.ValuedollarContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_mutable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMutable" ):
                return visitor.visitMutable(self)
            else:
                return visitor.visitChildren(self)




    def mutable(self):

        localctx = D96Parser.MutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mutable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(D96Parser.VAR)
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 127
                self.nonvalue()
                pass

            elif la_ == 2:
                self.state = 128
                self.nonvaluedollar()
                pass

            elif la_ == 3:
                self.state = 129
                self.value()
                pass

            elif la_ == 4:
                self.state = 130
                self.valuedollar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImmutableContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAL(self):
            return self.getToken(D96Parser.VAL, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def nonvaluedollar(self):
            return self.getTypedRuleContext(D96Parser.NonvaluedollarContext,0)


        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def valuedollar(self):
            return self.getTypedRuleContext(D96Parser.ValuedollarContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_immutable

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImmutable" ):
                return visitor.visitImmutable(self)
            else:
                return visitor.visitChildren(self)




    def immutable(self):

        localctx = D96Parser.ImmutableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_immutable)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(D96Parser.VAL)
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 134
                self.nonvalue()
                pass

            elif la_ == 2:
                self.state = 135
                self.nonvaluedollar()
                pass

            elif la_ == 3:
                self.state = 136
                self.value()
                pass

            elif la_ == 4:
                self.state = 137
                self.valuedollar()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonvalueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_nonvalue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonvalue" ):
                return visitor.visitNonvalue(self)
            else:
                return visitor.visitChildren(self)




    def nonvalue(self):

        localctx = D96Parser.NonvalueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_nonvalue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(D96Parser.ID)
            self.state = 145
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 141
                self.match(D96Parser.COMMA)
                self.state = 142
                self.nonvalue()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 143
                self.match(D96Parser.COLON)
                self.state = 144
                self.typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NonvaluedollarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def COMMA(self):
            return self.getToken(D96Parser.COMMA, 0)

        def nonvalue(self):
            return self.getTypedRuleContext(D96Parser.NonvalueContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_nonvaluedollar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNonvaluedollar" ):
                return visitor.visitNonvaluedollar(self)
            else:
                return visitor.visitChildren(self)




    def nonvaluedollar(self):

        localctx = D96Parser.NonvaluedollarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_nonvaluedollar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147
            self.match(D96Parser.DOLLARID)
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 148
                self.match(D96Parser.COMMA)
                self.state = 149
                self.nonvalue()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 150
                self.match(D96Parser.COLON)
                self.state = 151
                self.typ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(D96Parser.ID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def ASSIOP(self):
            return self.getToken(D96Parser.ASSIOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_value

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValue" ):
                return visitor.visitValue(self)
            else:
                return visitor.visitChildren(self)




    def value(self):

        localctx = D96Parser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_value)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(D96Parser.ID)
            self.state = 165
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 155
                self.match(D96Parser.COMMA)
                self.state = 156
                self.value()
                self.state = 157
                self.match(D96Parser.COMMA)
                self.state = 158
                self.exp()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 160
                self.match(D96Parser.COLON)
                self.state = 161
                self.typ()
                self.state = 162
                self.match(D96Parser.ASSIOP)
                self.state = 163
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValuedollarContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DOLLARID(self):
            return self.getToken(D96Parser.DOLLARID, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(D96Parser.COMMA)
            else:
                return self.getToken(D96Parser.COMMA, i)

        def value(self):
            return self.getTypedRuleContext(D96Parser.ValueContext,0)


        def exp(self):
            return self.getTypedRuleContext(D96Parser.ExpContext,0)


        def COLON(self):
            return self.getToken(D96Parser.COLON, 0)

        def typ(self):
            return self.getTypedRuleContext(D96Parser.TypContext,0)


        def ASSIOP(self):
            return self.getToken(D96Parser.ASSIOP, 0)

        def getRuleIndex(self):
            return D96Parser.RULE_valuedollar

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitValuedollar" ):
                return visitor.visitValuedollar(self)
            else:
                return visitor.visitChildren(self)




    def valuedollar(self):

        localctx = D96Parser.ValuedollarContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_valuedollar)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 167
            self.match(D96Parser.DOLLARID)
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.COMMA]:
                self.state = 168
                self.match(D96Parser.COMMA)
                self.state = 169
                self.value()
                self.state = 170
                self.match(D96Parser.COMMA)
                self.state = 171
                self.exp()
                pass
            elif token in [D96Parser.COLON]:
                self.state = 173
                self.match(D96Parser.COLON)
                self.state = 174
                self.typ()
                self.state = 175
                self.match(D96Parser.ASSIOP)
                self.state = 176
                self.exp()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethdeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def basicmeth(self):
            return self.getTypedRuleContext(D96Parser.BasicmethContext,0)


        def constructor(self):
            return self.getTypedRuleContext(D96Parser.ConstructorContext,0)


        def destructor(self):
            return self.getTypedRuleContext(D96Parser.DestructorContext,0)


        def getRuleIndex(self):
            return D96Parser.RULE_methdecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethdecl" ):
                return visitor.visitMethdecl(self)
            else:
                return visitor.visitChildren(self)




    def methdecl(self):

        localctx = D96Parser.MethdeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_methdecl)
        try:
            self.state = 183
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [D96Parser.ID, D96Parser.DOLLARID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 180
                self.basicmeth()
                pass
            elif token in [D96Parser.CONSTRUCTOR]:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.constructor()
                pass
            elif token in [D96Parser.DESTRUCTOR]:
                self.enterOuterAlt(localctx, 3)
                self.state = 182
                self.destructor()
                pass
            else:
                raise NoViableAltException(self)
